--- a/.kchen_bashrc
+++ b/.kchen_bashrc
@@ -58,7 +58,7 @@ alias sane='echo -e "\\033c";tput is2;stty sane line 1 rows 40 columns 120'
 # alias sane='echo -e "\\033c";tput is2;stty sane line 1'
 # my idea of a "standard size xterm"
 alias xsane='echo -e "\\033c";tput is2;stty sane line 1 rows 30 columns 100'
-
+alias ll='ls -altrF'
 # where script files are located, for daily cron job
 # use relative path
 # export MY_SCRIPT_HOME="./scripts/daily"
